--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "firebase": "^10.7.0",
     "lilconfig": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,7 +41,9 @@
   },
   "packageManager": "yarn@4.0.2",
   "devDependencies": {
+    "@babel/preset-react": "^7.23.3",
     "@craco/craco": "^7.1.0",
+    "@emotion/babel-plugin": "^11.11.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@types/eslint": "^8",
     "@types/testing-library__jest-dom": "^6.0.0",
