--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@types/react-dom": "^18.0.0",
     "firebase": "^10.7.0",
     "lilconfig": "^3.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "swiper": "9",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -47,6 +51,7 @@
     "@emotion/babel-plugin": "^11.11.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@types/eslint": "^8",
+    "@types/lodash": "^4.14.202",
     "@types/testing-library__jest-dom": "^6.0.0",
     "craco-alias": "^3.0.1",
     "eslint": "^8.54.0",
