--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "firebase": "^10.7.0",
+    "framer-motion": "^10.16.16",
     "lilconfig": "^3.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
