--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "swiper": "9",
     "typescript": "^4.4.2",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -54,6 +56,7 @@
     "@types/eslint": "^8",
     "@types/lodash": "^4.14.202",
     "@types/testing-library__jest-dom": "^6.0.0",
+    "@types/validator": "^13.11.7",
     "craco-alias": "^3.0.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
