--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.16.16",
     "lilconfig": "^3.0.0",
     "lodash": "^4.17.21",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
@@ -55,6 +56,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@types/eslint": "^8",
     "@types/lodash": "^4.14.202",
+    "@types/qs": "^6.9.11",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@types/validator": "^13.11.7",
     "craco-alias": "^3.0.1",
