--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.16.16",
     "lilconfig": "^3.0.0",
     "lodash": "^4.17.21",
+    "lodash.flatten": "^4.4.0",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -57,15 +58,18 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@types/eslint": "^8",
     "@types/lodash": "^4.14.202",
+    "@types/lodash.flatten": "^4.4.9",
     "@types/qs": "^6.9.11",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@types/validator": "^13.11.7",
+    "@types/webpack-bundle-analyzer": "^4",
     "craco-alias": "^3.0.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "webpack-bundle-analyzer": "^4.10.1"
   }
 }
